# MobileCameraClient

./: CMakeLists.txt  CameraStream.qml  main.cpp  main.qml  ptzcontroller.cpp  ptzcontroller.h  qtquickcontrols2.conf
